--- a/Client/practical-assignment-client/src/app/main/login/login.component.html
+++ b/Client/practical-assignment-client/src/app/main/login/login.component.html
@@ -1,21 +1,17 @@
-<div class="alert" *ngIf="error == -1">
+<!-- <div class="alert" *ngIf="error == -1">
   <button type="button" class="close" data-dismiss="alert" aria-hidden="true">
     &times;
   </button>
   <strong class="">
     Username Or Password is wrong
   </strong>
-</div>
-<h1>Đăng Nhập</h1>
+</div> -->
+<h1>Login</h1>
 <form>
   <div class="form-group">
-    <label for="formGroupExampleInput">Nhập tài khoản</label>
-    <input type="text" class="form-control" [(ngModel)]="userName" [ngModelOptions]="{standalone: true}" id="formGroupExampleInput" placeholder="Example input">
+    <label for="formGroupExampleInput">Username</label>
+    <input type="text" class="form-control" [(ngModel)]="user.userName" [ngModelOptions]="{standalone: true}" id="formGroupExampleInput" placeholder="Example input">
   </div>
-  <div class="form-group">
-    <label for="formGroupExampleInput2">Nhập mật khẩu</label>
-    <input type="text" class="form-control" [(ngModel)]="password" [ngModelOptions]="{standalone: true}" id="formGroupExampleInput2" placeholder="Another input">
-  </div>
-  <button type="button" class="btn btn-primary" (click)="onLogin()">Đăng nhập</button>
+  <button type="button" class="btn btn-primary" (click)="onLogin()">Login</button>
 
 </form>
