--- a/Client/practical-assignment-client/src/app/header/header.component.html
+++ b/Client/practical-assignment-client/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02"
-    aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02"
+    aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
@@ -13,11 +13,15 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/data-binding" routerLinkActive="active">Data-Binding</a>
       </li>
-      
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/login" routerLinkActive="active">Login </a>
+
+      <li class="nav-item" *ngIf="flatBtn===false">
+        <a class="nav-link" routerLink="/login" routerLinkActive="active">Login</a>
       </li>
     </ul>
+    <div *ngIf="flatBtn===true" class="form-inline my-2 my-lg-0">
+      <p class="nav-link custom-p">Account: {{user.userName}}</p>
+      <a class="nav-link" (click)="onLogout()" routerLink="/login" routerLinkActive="active">Logout</a>
+    </div>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="text" placeholder="Search">
       <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
