--- a/Client/PortalAdmin/PortalAdmin/views/common/header.html
+++ b/Client/PortalAdmin/PortalAdmin/views/common/header.html
@@ -9,19 +9,19 @@
             <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                 <ul class="navbar-nav flex-grow-1">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        <a class="nav-link text-dark" asp-area="" ui-sref="pages.home" ui-sref-active="active" asp-controller="Home" asp-action="Index">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" ui-sref="pages.library" ui-sref-active="active" asp-controller="Home" asp-action="Library">Library</a>
+                        <a class="nav-link text-dark" asp-area="" ui-sref="pages.library" ui-sref-active="active" asp-controller="Library" asp-action="Library">Library</a>
                     </li>
-                    <li class="nav-item">
-                        <p class="nav-link custom-p">Account: {{user.userName}}</p>
-                        <a class="nav-link" ng-click="Logout()" routerLinkActive="active">Logout</a>
-                    </li>
+                   
                 </ul>
                 <ul class="navbar-nav flex-grow-1"></ul>
             </div>
-
+            <div style="display: inherit">
+                    <p style="margin: 8px;color: green;">Account: {{user.userName}}</p>
+                    <a class="btn" ng-click="Logout()" routerLinkActive="active">Logout</a>             
+            </div>
         </div>
     </nav>
 </header>
