update code: 1.  /api/Document/{libraryId} -> /api/Document/{documentId} 2. naming convention javascript

--- a/Client/PortalAdmin/PortalAdmin/views/common/header.html
+++ b/Client/PortalAdmin/PortalAdmin/views/common/header.html
@@ -20,7 +20,7 @@
             </div>
             <div style="display: inherit">
                     <p style="margin: 8px;color: green;">Account: {{user.userName}}</p>
-                    <a class="btn" ng-click="Logout()" routerLinkActive="active">Logout</a>             
+                    <a class="btn" ng-click="logout()" routerLinkActive="active">Logout</a>             
             </div>
         </div>
     </nav>
