--- a/Client/PortalAdmin/PortalAdmin/views/login/login.html
+++ b/Client/PortalAdmin/PortalAdmin/views/login/login.html
@@ -14,7 +14,7 @@
             </div>
 
             <div class="container-login100-form-btn">
-                <button class="login100-form-btn" ng-click="Login()">
+                <button class="login100-form-btn" ng-click="login()">
                     Login
                 </button>
             </div>
